# ActiveCut

./: README.md  gmm.cxx  gmm.h  graphcuts.cxx  loadfiles.h  query.h  utility.cxx
src/: CMakeLists.txt  common.h  grabcutseg.cxx  graphcuts.h  loadfiles.cxx  query.cxx  utility.h
